<resources>
    <string name="app_name" translatable="false">TeamActivity</string>
    <string name="tcsimage1">tcsimage</string>
    <string name="tcsloginimage">tcsloginimage</string>
    <string name="emp_id">Emp ID</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="wowimageoutside">wowimageoutside</string>
    <string name="wowimageinside">wowimageinside</string>
    <string name="team_management_application">Team Management Application</string>
    <string name="appdescription">This application is to manage the TCS-WoW employees. With this app, we can manage the total employees, onsite and offshore details, designations, OFL ratio, project wise resource details</string>
    <string name="Register">Register</string>
    <string name="registerback">Back</string>
    <string name="menu">menu</string>
    <string name="action_settings">Search An Employee</string>
    <string name="action_share">Reports</string>
    <string name="action_contact">Contact Us</string>
    <string name="action_exit">Logout</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="open">open</string>
    <string name="close">close</string>


</resources>
