<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/tcsimageinside"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:alpha="0.1"
        android:contentDescription="@string/tcsimage1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/wowimageinside"
        app:layout_constraintEnd_toEndOf="@+id/wowimageinside"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/wowimageinside"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/tcsimage" />

    <ImageView
        android:id="@+id/wowimageinside"
        android:layout_width="415dp"
        android:layout_height="221dp"
        android:alpha="0.1"
        android:contentDescription="@string/wowimageinside"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/wowimage" />

    <TextView
        android:id="@+id/Teammanagementtext"
        android:layout_width="262dp"
        android:layout_height="177dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_horizontal|center_vertical"
        android:singleLine="false"
        android:text="@string/team_management_application"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#205C4E"
        android:textColorHighlight="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/wowimageinside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322"
        tools:layout_editor_absoluteY="238dp" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="52dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dwwn"
        android:contentDescription="@string/menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Create"
        android:layout_width="56dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:tint="#97D64F"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="50dp"
        app:srcCompat="@drawable/plusicon" />

</androidx.constraintlayout.widget.ConstraintLayout>