<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/tcsimageinside"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:alpha="0.1"
        android:contentDescription="@string/tcsloginimage"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/wowimageinside"
        app:layout_constraintEnd_toEndOf="@+id/wowimageinside"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/wowimageinside"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/tcsimage" />

    <ImageView
        android:id="@+id/wowimageinside"
        android:layout_width="415dp"
        android:layout_height="221dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.1"
        android:contentDescription="@string/wowimageoutside"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/wowimage" />

    <TextView
        android:id="@+id/Teammanagementtext"
        android:layout_width="262dp"
        android:layout_height="177dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_horizontal|center_vertical"
        android:singleLine="false"
        android:text="Team Management Application"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#205C4E"
        android:textColorHighlight="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/wowimageinside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/empid"
        android:layout_width="193dp"
        android:layout_height="49dp"
        android:layout_margin="8dp"
        android:background="@drawable/borders"
        android:clickable="false"
        android:cursorVisible="true"
        android:editable="true"
        android:gravity="center"
        android:hint="Emp_id"
        android:selectAllOnFocus="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#B8B4B4"
        android:textCursorDrawable="@drawable/cursorblack"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/wowimageinside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Teammanagementtext"
        app:layout_constraintVertical_bias="0.086" />

    <EditText
        android:id="@+id/empid3"
        android:layout_width="193dp"
        android:layout_height="49dp"
        android:layout_margin="8dp"
        android:background="@drawable/borders"
        android:gravity="center"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#BFBFBC"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/wowimageinside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Teammanagementtext"
        app:layout_constraintVertical_bias="0.275" />

    <Button
        android:id="@+id/siginin"
        android:layout_width="116dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/borders"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empid3" />

</androidx.constraintlayout.widget.ConstraintLayout>